--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!Doctype html>
+
 <script src="code/game.js"></script>
 <script src="code/game_levels.js"></script>
-
-<link rel="stylesheet" href="css/game.css">
+<script src="code/canvas.js"></script>
 
 <body>
-  <script>
-    runGame(GAME_LEVELS, DOMDisplay);
-  </script>
+<h1>The Coin Game </h1>
+<script>
+  runGame(GAME_LEVELS, CanvasDisplay);
+</script>
 </body>
